	* src/jacl/tcl/lang/Var.java (setVar, incrVar):
	Remove ugly workarounds and hacks that were
	needed since the takeExclusive API is so broken.
	Invoke isShared and duplicate methods instead,
	the code now matches the Tcl core implementation.
	* src/tcljava/tcl/lang/TclObject.java (duplicate,
	takeExclusive): Add new duplicate method and
	deprecate the takeExclusive method.
	* src/tests/jacl/tcl/lang/TestParsevarCmd.java:
	Release ParseResult when done with it.
	* src/tests/tclblend/tcl/lang/IntListAppendCmd.java:
	Replace takeExclusive call with duplicate.
	* src/tests/tcljava/tests/ListReplaceCmd.java:
	Replace takeExclusive call with duplicate.
	* tests/inprogress/BgErrorMgr.test:
	Modify test case so that it matches current
	implementation. This test case depending on
	the old behavior of a list append that
	appended a copy instead of the real object.
	* tests/jacl/refCount.test: Add a series of
	m_nullResult and parser ref count tests.

2003-01-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/CallFrame.java (dispose):
	Clear out the var hashtable before setting it
	to null. This does not change the functionality.
	* src/jacl/tcl/lang/Interp.java (setResult):
	Optimize the case where the interp result is set
	to the same object as the current result.
	* src/jacl/tcl/lang/Parser.java: Minor doc
	improvement, no code changes.
	* src/jacl/tcl/lang/TclList.java (append,
	insert, replace):
	* src/tclblend/tcl/lang/TclList.java (append,
	replace): Raise a specific error if a method
	is incorrectly called with a shared object.

2003-01-01  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (AC_JAVA_CLASSPATH): Add additional
	message to log file to indicate that an existing
	CLASSPATH env var is being used.
	* tests/tcljava/JavaInvoke.test: Test the
	JavaInvoke.isAssignable method.
	* tests/tcljava/PkgInvoker.test: Test the
	usesDefaultInvoker and isAccessible methods.
